FIX: Spacing fixed

--- a/app/assets/stylesheets/pages/_trails_index.scss
+++ b/app/assets/stylesheets/pages/_trails_index.scss
@@ -12,6 +12,7 @@
   font-size: 30px;
   color: $mm-gray-font;
   letter-spacing: 1px;
+  padding-top: 1em;
 }
 
 .title-first-letter {
